<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background= "@drawable/jigsaw" >
    
    <TextView android:id="@+id/option_title"
        android:text="@string/Options"
       	android:textColor="#000000"
       	android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="48dp"
        android:layout_centerHorizontal="true" />

	<CheckBox
        android:id="@+id/easy"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meh"
        android:checked="false"
        android:layout_marginTop="150dip"
        android:layout_marginLeft="80dip"
        android:textSize="48dp" />
 
    <CheckBox
        android:id="@+id/medium"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notbad"
        android:checked="false"
        android:layout_marginLeft="80dip"
        android:textSize="48dp"
        android:layout_below="@id/easy" />
 
    <CheckBox
        android:id="@+id/boss"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boss"
        android:checked="false"
        android:layout_marginLeft="80dip"
        android:textSize="48dp"
        android:layout_below="@id/medium" />
      
</RelativeLayout>