<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background= "@drawable/jigsaw">
            
    <Button android:id="@+id/btnPlay"
        	android:textColor="@drawable/button_selector"
        	android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Play"
            android:layout_marginTop="100dip"
            android:textSize="64dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />
    
     <Button android:id="@+id/btnOption"
            android:textColor="@drawable/button_selector"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Options"
			android:textSize="64dp"
            android:textStyle="bold"
            android:layout_centerInParent="true" />
     
      <Button android:id="@+id/btnExit"
            android:textColor="@drawable/button_selector"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Exit"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dip"
            android:textSize="64dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>
      
</RelativeLayout>